# Full_Addon_V2

./: .gitignore  AuthManager.gs  ColumnMappingDialog.html  Config.gs  CredentialsDialog.html  ImportAPI.gs  ImportDialog.gs  Import_Dialog.html  MappingManager.gs  MappingManagerDialog.html  PerformanceCache.gs  PriceListAPI.gs  PriceListDialog.html  PricelistDialog.gs  Readme.md  SheetManager.gs  UIManager.gs  UploadAPI.gs  UploadSchemas.gs  Utils.gs  ZotoksAPI.gs  ZotoksColumnMappingDialog.html  ZotoksCredentialsDialog.html  ZotoksImportDialog.html  appsscript.json  main.gs
api-tester/: CLAUDE.md  google-stitch-prompt.md  pyproject.toml  run.py  update.md
api-tester/app/: __init__.py  assertions.py  auth.py  config.py  main.py  models.py  mutation_safety.py  test_storage.py  upload_schemas.py
api-tester/app/routers/: api.py
api-tester/static/: index.html  test-runner.html
api-tester/static/js/: app.js
backend_V2/: FieldMapper.gs  Main.gs  MappingManager.gs  PriceListAPI.gs  SheetManager.gs  ZotoksColumnMappingDialog.html
