[tool.poetry]
name = "api-tester"
version = "0.1.0"
description = "Zotok API Tester"
authors = ["Ved-Padmawar <thevedp@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.128.0"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
pydantic = "^2.12.5"
httpx = "^0.28.1"
orjson = "^3.11.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
